fix(sidenav): fix z-indexes

--- a/app/styles/components/pages/chatroom/_sidebar.scss
+++ b/app/styles/components/pages/chatroom/_sidebar.scss
@@ -4,7 +4,7 @@
 // }
 
 .bm-menu-wrap {
-  z-index: 1201 !important;
+  z-index: 102 !important;
   background-color: #263445;
   color: #fff;
   .rooms {
